tests/http/requests/invalid/chunked_08.py
from web_server.errors import InvalidHeader

request = InvalidHeader
